# Old-task

./: .gitignore
06/Figure_03/: Figure_03.cpp  Figure_03.sln  Figure_03.vcxproj  Source_figure.cpp  figure.h  isosceles_triangle.cpp  isosceles_triangle.h  parallelogram.h  quadrangle.cpp  quadrangle.h  qw02.cpp  rectangle.cpp  rhomb.h  tr01.cpp  tr01.h  triangle.cpp  triangle.h
06/counter_02/: counter_02.cpp  counter_02.sln  counter_02.vcxproj  klass.cpp  klass_counter.cpp  klass_counter.h
06/matchFF_1/: Source.cpp  header.h  matchFF_1.cpp  matchFF_1.sln  matchFF_1.vcxproj
06/task0206new/: task0206new.sln
06/task0206new/task0206new/: diff.cpp  diff.h  div.cpp  div.h  multi.cpp  multi.h  sum.cpp  (+2 more)
07/mode 01/: mode 01.sln
07/sub02/: sub02.sln
08/Figure_03/: Figure_03.cpp  Figure_03.vcxproj  Source_figure.cpp  equilateral_triangle.cpp  equilateral_triangle.h  figure.cpp  figure.h  isosceles_triangle.cpp  parallelogram.cpp  quadrangle.cpp  quadrangle.h  qw02.cpp  rectangle.cpp  rectangle.h  rhomb.cpp  right_triangle.cpp  square.cpp  tr01.cpp  triangle.cpp  triangle.h
08/String_02/: String_02.sln
09/fraction01/: fraction01.sln
09/fraction02/: fraction02.sln
10/: Cmakelists.txt  Main.cpp
10second/: CMakeLists.txt  Source_figure.cpp  figure.h  isosceles_triangle.cpp  isosceles_triangle.h  quadrangle.h  rhomb.cpp  right_triangle.cpp  right_triangle.h  square.h  triangle.cpp
task5001/: task5001.cpp  task5001.sln  task5001.vcxproj
task5002/: task5002.cpp  task5002.sln  task5002.vcxproj
task5003/: task5003.cpp  task5003.sln  task5003.vcxproj
(+16 files in other folders)
